<resources>
    <string name="app_name">Stories</string>

    <string name="facebook_app_id">169142597706656</string>
    <string name="fb_login_protocol_scheme">fb169142597706656</string>
    <string name="google_client_id">268580756110-kvug5tfcjep2r8b4pi7kkggmfh0bbkq6.apps.googleusercontent.com</string>
    <string name="google_client_secret">-0yB4cEb7NyA43p20q-DtWqz</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="complete_your_history">Complete your history</string>
    <string name="powered_by_artyou_global">powered by Artyou Global</string>
    <string name="stories">Stories</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="change_photo">Change photo</string>
    <string name="account">Account</string>
    <string name="marketing">Marketing</string>
    <string name="payment_language_and_currency">Payment,Language and Currency</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="this_object_is_a">This Object is a</string>
    <string name="title">Title</string>
    <string name="or_choose_a_object_from_collect">or choose a Object from Collect</string>
    <string name="returnn">Return</string>
    <string name="choose_a_image_nof_an_artwork_a_book_or_a_memory">Choose a image of an artwork, a book or a memory</string>
    <string name="tell_your_stories_to_the_world">Tell your stories to the world</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="add_more_audios_naudios_description_nphotos_videos_texts">Add more audios,\naudios description, \nphotos, videos, texts</string>
    <string name="description">Description</string>
    <string name="choose_the_language">Choose the language</string>
    <string name="colacar_o_select_box_aquinos">Colacar o select box aquinos</string>
    <string name="complete_your_history_with_art_n_books_and_memories">Complete your history with art,  books and memories</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="join">Join</string>
    <string name="communication_settings">Communication Settings</string>
    <string name="would_you_like_to_receive_system_emails">Would you like to receive System emails ?</string>
    <string name="start_with_social">Start with Social</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="india">India</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="language">Language</string>
    <string name="e_mail">E-mail</string>
    <string name="resend"><u>Resend</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_read_and_accept_terms_and_conditions">I read and accept <u>Terms and Conditions</u></string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="thank_you_n_for_sharing_n_your_stories">Thank you\nfor sharing\nyour Stories</string>
    <string name="now_you_can">Now you can</string>
    <string name="share_on">Share on</string>
    <string name="get_a_link">Get a Link</string>
    <string name="download_a_n_qr_code">Download a\nQR code</string>
    <string name="manage_your_collections_with_collect">Manage your collections with Collect</string>
    <string name="made_for_artists_galleries_museums_collectors_curators_and_you">Made for artists, galleries, museums, collectors, curators and you.</string>
    <string name="personal_collection">Personal Collection</string>
    <string name="name_and_lastname">Name and lastname</string>
    <string name="mobile">Mobile</string>
    <string name="select_object">Select Object</string>
    <string name="search_here">Search Here</string>
    <string name="please_select_gender">Please select Gender</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_language">Please enter Language</string>
    <string name="please_enter_email">Please enter E-mail</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_confirm_password">Please enter Confirm Password</string>
    <string name="passwords_should_be_same">Password and confirm password should be same</string>
    <string name="read_and_accept_terms">Please read and accept terms and conditions</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_select_country">Please select country</string>
    <string name="please_enter_username">Please enter user name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="enter_valid_email">Please enter valid email address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_email">Please, check your e-mail</string>
    <string name="choose_the_currency">Choose the curency</string>
    <string name="segment">Segment</string>
    <string name="select_user_segment">Please select User Segment</string>

</resources>
