<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".fragments.FragmentLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="20dp">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="11dp"
                android:fontFamily="@font/circular_std_book"
                android:text="@string/stories"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/circular_std_book"
                android:text="@string/complete_your_history_with_art_n_books_and_memories"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/et_back_ground"
                android:hint="@string/login"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/et_back_ground"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_signin_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_login_facebook"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginRight="17dp"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginRight="17dp"
                    android:src="@drawable/ic_instagram" />

                <ImageView
                    android:id="@+id/iv_google_login"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginRight="17dp"
                    android:src="@drawable/ic_search" />

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginRight="17dp"
                    android:src="@drawable/ic_twitter" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"

                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_fp_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:padding="5dp"
                android:fontFamily="@font/circular_std_book"
                android:text="@string/i_forgot_my_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/circular_std_book"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/btn_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/join"
                android:textAllCaps="false"
                android:textColor="@color/white"

                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/circular_std_book"
                android:text="@string/powered_by_artyou_global"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_progressbar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>