<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/circular_std_book"
            android:text="@string/stories"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />


        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/complete_your_history"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:fontFamily="@font/circular_std_book"
        android:text="@string/powered_by_artyou_global"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textSize="12sp" />


</RelativeLayout>